--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,8 +14,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
-    "react-swipe-card": "^0.1.4",
     "react-swipeable": "^5.5.0",
+    "react-swipeable-cards": "^1.0.6",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
